# nanoagent

./: .pre-commit-config.yaml  DESIGN.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.plans/eval-framework/: plan.md
.plans/eval-framework/completed/: 001-convert-executor-tests.md  002-convert-reflector-tests.md  003-convert-task-planner-tests.md  004-convert-e2e-tests.md  005-convert-orchestration-tests.md  006-verify-test-performance.md  007-eval-models-with-tests.md  008-judge-evaluator-with-tests.md  009-pytest-eval-marker.md  010-plan-quality-eval.md  011-reflection-accuracy-eval.md  012-execution-correctness-eval.md  013-convergence-eval.md  014-validate-and-tune.md
.plans/eval-framework/implementation/: 005-convert-orchestration-tests.md
.plans/eval-framework/pending/: 002-convert-reflector-tests.md  003-convert-task-planner-tests.md  004-convert-e2e-tests.md  006-verify-test-performance.md  007-eval-models-with-tests.md  008-judge-evaluator-with-tests.md  009-pytest-eval-marker.md  010-plan-quality-eval.md  011-reflection-accuracy-eval.md  012-execution-correctness-eval.md  013-convergence-eval.md  014-validate-and-tune.md
.plans/nanoagent/: plan.md
.plans/nanoagent/completed/: 001-project-setup.md  002-data-models.md  003-todo-manager.md  004-task-planner.md  005-executor-agent.md  006-reflector-agent.md  007-manual-orchestration-poc.md  008-tool-registry.md  009-built-in-tools.md  010-orchestrator.md  011-stream-manager.md  012-end-to-end-tests.md
.plans/nanoagent/implementation/: 003-todo-manager.md.bak  005-executor-agent.md.bak
.plans/nanoagent/pending/: 001-project-setup.md  002-data-models.md  004-task-planner.md  006-reflector-agent.md  007-manual-orchestration-poc.md  (+10 more)
.plans/persistence/: plan.md
examples/: __init__.py  toy_demo.py
nanoagent/: __init__.py  config.py  config_test.py  conftest.py
nanoagent/.claude/: settings.local.json
nanoagent/core/: __init__.py  executor.py  executor_test.py  orchestrator.py  orchestrator_test.py  reflector.py  reflector_test.py  stream_manager.py  stream_manager_test.py  task_planner.py  task_planner_test.py  todo_manager.py  todo_manager_test.py
nanoagent/evals/: __init__.py  judge.py  judge_test.py  models.py  models_test.py
nanoagent/models/: __init__.py  schemas.py  schemas_test.py  security_test.py
nanoagent/persistence/: __init__.py  memory_store.py  memory_store_test.py  protocols.py  sqlite_store.py  sqlite_store_test.py
nanoagent/tools/: __init__.py  builtin.py  builtin_test.py  registry.py  registry_test.py
(+15 files in other folders)
