[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoagent"
version = "0.1.0"
description = "Lightweight multi-agent framework using Pydantic AI"
requires-python = ">=3.14"
dependencies = [
    "pydantic==2.12.4",
    "pydantic-ai==1.18.0",
    "anthropic==0.73.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "basedpyright>=1.13.0",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "B", "UP", "S", "RET", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"

[tool.pytest.ini_options]
testpaths = ["nanoagent"]
python_files = ["*_test.py"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.uv]
managed = true
